[tool.poetry]
name = "lacss"
version = "0.0.0"
description = "Tools for cell segmentation"
authors = ["Ji Yu <jyu@uchc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
imageio = "^2.9.0"
scikit-image = ">=0.19.0"
imagecodecs = "^2023.3.16"
opencv-python = "^4.8.1.78"
xtrain = "^0.3.2"
protoc-wheel-0 = "^24.4"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
pytest = "^7.4.0"
jax = {extras = ["cuda11_pip"], version = "^0.4, <=0.4.24"}
nvidia-cudnn-cu11 = "^8.0" # bypass jax packaging error
orbax-checkpoint = "0.5.3"
ott-jax = "^0.4.0"
tensorflow = "^2.16.1"
ml-collections = "^0.1.1"
matplotlib = "^3.8.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.2.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-gen-files = "^0.5.0"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
